--- a/app.json
+++ b/app.json
@@ -1,9 +1,9 @@
 {
-    "name": "KennedyX Music",
+    "name": "jaen Music",
     "logo": "https://telegra.ph/file/73cbefa8401982900fe81.jpg",
-    "description": "KennedyX Music allow you to stream music trought the telegram voice chat feature.",
+    "description": "jaen Music allow you to stream music trought the telegram voice chat feature.",
     "keywords": ["music", "voice chat", "telegram"],
-    "repository": "https://github.com/KennedyProject/KennedyXMusic",
+    "repository": "https://github.com/Zaenproject/ZaenMusic",
     "stack": "container",
     "env": {
         "SESSION_NAME": {
